--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,7 +75,7 @@ body{
 
 .title-div {
     background-color: inherit;
-    background-image: url(https://www.stephanieobi.com/wp-content/uploads/2020/06/Untitled-design-1.jpg);
+    background-image: url(/images/stephanieObi.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: local;
